Java-Angular-MySQL-Nginx/angular-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Client-Angular
  labels:
    app: client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: angular-container
        image: gerrome/java-angular-stack_frontend:1
---
apiVersion: v1
kind: Service
metadata:
  name: AngularService
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: http
    port: 80
