Java-Angular-MySQL-Nginx/java-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Backend-Java
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: java-container
        image: gerrome/java-angular-stack_backend:1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: JavaService
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 8080
