Java-Angular-MySQL-Nginx/mysql.yml
apiVersion: v1
kind: Service 
metadata:
  name: mySQL
  labels:
    app: mySQL  
spec:
   selector:
      app: mySQL
   ports:
        port: 3306
        targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mySQLStatefulset
spec:
   serviceName: mySQL 
   replicas: 1
   selector:
    matchLabels:
      app: mySQL
   template:
    metadata:
      labels:
        app: mySQL
        selector: mySQL
    spec:
      containers:
        - name: mysql-container
          image: mysql:5.7
          ports: 
            - containerPort: 3306
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
