Java-Angular-MySQL-Nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
spec:
  defaultBackend:
    service:
      name: AngularService
      port:
        number: 80
  rules:
  - host: victorifah.nip.io
    http:
     paths:
     - path: /?(.*)
       pathType: Prefix
       backend:
         service:
           name: AngularService
           port:
             number: 80

     - path: /api/?(.*)
       pathType: Prefix
       backend:
         service:
           name: JavaService
           port:
             number: 80
